test/variables/export/export-var.good
export-var.chpl:1: error: export variables are not yet supported
export-var.chpl:2: error: export variables are not yet supported
